# scenegram

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/: README.md
.github/workflows/: README.md  ci.yml
examples/: README.md  __init__.py
examples/showcase_bot/: README.md  __init__.py  main.py  services.py
examples/showcase_bot/scenes/: README.md  __init__.py  admin.py  admin_broadcast.py  catalog_pack.py
examples/showcase_bot/scenes/common/: README.md  __init__.py  catalog.py  delete.py  onboarding.py  start.py
scenegram/: README.md  __init__.py  _utils.py  background.py  base.py  bootstrap.py  cli.py  contracts.py  deep_links.py  di.py  formatting.py  history.py  namespaces.py  packs.py  patterns.py  roles.py  runtime.py  security.py  state.py  tasks.py
scenegram/ui/: __init__.py  callbacks.py  keyboards.py  pagination.py
tests/: __init__.py  conftest.py  test_base_and_patterns.py  test_bootstrap.py  test_data_proxy.py  test_deep_links.py  test_form_scene.py  test_formatting.py  test_runtime_modules.py  test_state_and_cli.py  test_ui.py
tests/fixtures/: __init__.py  callback_collision.py  deep_link_scenes.py  extra_scenes.py  sample_scenes.py
