[project]
name = "scenegram"
version = "0.3.0"
description = "Opinionated framework utilities for production-grade aiogram scenes"
readme = "README.md"
authors = [
    { name = "nacodeel", email = "nacodeel@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.24,<4.0",
]
keywords = ["aiogram", "telegram", "fsm", "scene-framework", "bot-development"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.11",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.setuptools.package-data]
scenegram = ["py.typed"]
